mobile responsive issue with horizontal scroll showing white space

--- a/src/style.css
+++ b/src/style.css
@@ -210,3 +210,8 @@ a {
       display: none;
   }
 }
+
+@media (max-width: 800px) {
+  html,body { overflow-x: hidden;
+  }
+}
